--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.3",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-sitemap": "^4.2.3",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
