--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "critters": "^0.0.23",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.475.0",
