--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@vercel/speed-insights": "^1.2.0",
     "critters": "^0.0.23",
     "framer-motion": "^12.4.3",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
