--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
     "theme_color": "#3b82f6",
     "icons": [
       {
-        "src": "/icons/icon-192x192.png",
+        "src": "/next.svg",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/svg"
       },
       {
-        "src": "/icons/icon-512x512.png",
+        "src": "/next.svg",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/svg"
       }
     ]
   }
