Keyword freelance dev

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "Killian Doubre - Développeur Web Full Stack",
+    "name": "Killian Doubre - Développeur Web Freelance",
     "short_name": "Killian Doubre",
-    "description": "Développeur Web Full Stack spécialisé en React, Node.js, et création de sites web performants",
+    "description": "Développeur Web Freelance spécialisé en React, Node.js, et création de sites web performants",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#ffffff",
