--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "critters": "^0.0.23",
+    "css-loader": "^7.1.2",
     "framer-motion": "^12.4.3",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
@@ -24,12 +25,16 @@
     "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
+    "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "remark-gfm": "^4.0.1",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
