--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,14 +12,14 @@
   "categories": ["business", "productivity", "web development"],
   "screenshots": [
     {
-      "src": "/screenshots/desktop.jpg",
+      "src": "/og-image.jpg",
       "sizes": "1280x800",
       "type": "image/jpeg",
       "platform": "wide",
       "label": "Killian Doubre - Développeur Web Freelance (Desktop)"
     },
     {
-      "src": "/screenshots/mobile.jpg",
+      "src": "/og-image.jpg",
       "sizes": "750x1334",
       "type": "image/jpeg",
       "platform": "narrow",
@@ -28,57 +28,57 @@
   ],
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
+      "src": "/logo.svg",
       "sizes": "72x72",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-96x96.png",
+      "src": "/logo.svg",
       "sizes": "96x96",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-128x128.png",
+      "src": "/logo.svg",
       "sizes": "128x128",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-144x144.png",
+      "src": "/logo.svg",
       "sizes": "144x144",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-152x152.png",
+      "src": "/logo.svg",
       "sizes": "152x152",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/logo.svg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/logo.svg",
       "sizes": "384x384",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/logo.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "/icons/maskable-icon.png",
+      "src": "/logo.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "maskable"
     }
   ],
